# heliophysics-monitor

./: .gitignore  CLAUDE.md  Makefile  README.md  config.py  main.py  pyproject.toml
dashboard/: index.html
dashboard/data/: analyst_brief.json  event_counts_7d_30d.json  event_timeline.json  ingestion_timestamp.json  solar_disc_data.json  terminology_card.json  top_active_days.json
data/processed/: daily_counts.json  linkages.json  rolling_counts.json  severity.json  top_active_days.json  top_days.json
docs/corpus/: chunks.json
reports/: brief.md
src/features/: aggregates.py  normalise.py
src/ingest/: fetch_donki.py
src/rag/: build_corpus.py  embed.py  retrieve.py
src/reporting/: build_dashboard.py  generate_brief.py  solar_disc.py
