[project]
name = "heliophysics-monitor"
version = "0.1.0"
description = "Local-first Space Weather Intelligence System — NASA DONKI ingestion, deterministic analytics, RAG enrichment, static dashboard."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "chromadb>=0.5",
    "plotly>=5.18",
    "jinja2>=3.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "psutil>=5.9",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "ollama>=0.6.2",
]
